# cuda_workshop

addition/: cpu_serial.cpp  cuda_parallel.cu  cuda_serial.cu
others/: atomics.cu  barrier.cu  shared_memory.cu  square.cu
python/: testNumbaCuda.py
rgb2grey/: CMakeLists.txt  main.cpp  rgb2grey_cuda_v1.cu  rgb2grey_cuda_v2.cu  rgb2grey_cuda_v3.cu  rgb2grey_cuda_v4.cu  rgb2grey_serial.cpp
rgb2grey/cpu_serial/: CMakeLists.txt  cpu_serial.cpp  main.cpp
rgb2grey/cuda_parallel/: main.cpp  rgb2grey_cuda.cu
rgb2grey/cuda_serial/: main.cpp  rgb2grey_cuda.cu
rgb2grey/cuda_shared_memory/: CMakeLists.txt  main.cpp  rgb2grey_cuda.cu
